# warehouse_robot

./: .clang-format  .clang-tidy  .clangd  .gitignore  LICENSE  README.md  platformio.ini  pyproject.toml  warehouse_robot_gui.spec
.github/: platformio-variants.ini
.github/workflows/: ci.yml
docs/: arm-calibration.md  calibration.md  hc-06-38400.md  protocol-v2.md  protocol-v3.md  raised-wheel-qualification.md  sensors.md
scripts/: gamepad_config.py  gamepad_io.py  gamepad_mapping.py  gamepad_motor.py  gamepad_servo.py  gamepad_types.py  warehouse_robot_entry.py
scripts/robot_control/: __init__.py  calibration.py  cli.py  config.py  input.py  mapping.py  protocol.py  runtime.py  transport.py  web.py
src/: Config.h  InputMapper.cpp  InputMapper.h  MotorController.cpp  MotorController.h  RobotController.cpp  RobotController.h  SerialProtocol.cpp  SerialProtocol.h  State.h  main.cpp
src/app/: BuildConfig.h  CalibrationConsole.cpp  CalibrationConsole.h  PinProfile.h  RobotApplication.cpp  RobotApplication.h
src/core/: MotorBoardProtocol.cpp  MotorBoardProtocol.h  Scheduler.cpp  Scheduler.h  StackWatermark.cpp  StackWatermark.h
src/domain/: ArmKinematics.cpp  ArmKinematics.h  MecanumKinematics.cpp  MecanumKinematics.h  RobotTypes.h  RuntimeConfig.cpp  RuntimeConfig.h
src/drivers/: DriveBackend.h  L293DDriveBackend.cpp  L293DDriveBackend.h  NullDriveBackend.h  UartEncoderDriveBackend.cpp  UartEncoderDriveBackend.h
src/subsystems/: ArmSubsystem.cpp  (+11 more)
tests/: test_calibration.py  test_cli.py  test_mapping.py  test_protocol.py  test_runtime.py  test_web.py
(+5 files in other folders)
