[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-robot-control"
version = "0.1.0"
description = "Gamepad and calibration tools for the warehouse robot"
requires-python = ">=3.10"
dependencies = ["pygame>=2.5", "pyserial>=3.5"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
warehouse-robot = "robot_control.cli:main"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["robot_control*"]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]
