[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-robot-control"
version = "0.2.0"
description = "Gamepad and calibration tools for the warehouse robot"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.14.1",
    "pygame-ce==2.5.7",
    "pyserial==3.5",
]

[project.optional-dependencies]
test = ["pytest==8.4.2"]
package = ["pyinstaller==6.21.0"]

[project.scripts]
warehouse-robot = "robot_control.cli:main"

[tool.setuptools]
package-dir = {"" = "scripts"}

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["robot_control*"]

[tool.setuptools.package-data]
robot_control = ["web_static/*"]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
testpaths = ["tests"]
